code25_all/swift/26843781.txt
/Users/Multimodal/Desktop/telo/DataBase/DataBase-Bridging-Header.h:6:9: note: in file included from /Users/Multimodal/Desktop/telo/DataBase/DataBase-Bridging-Header.h:6:
#import "CaptureSessionManager.h"
        ^
./CaptureSessionManager.h:14:9: note: in file included from ./CaptureSessionManager.h:14:
#import "GFRSiOS.h"
        ^
/Users/Multimodal/Desktop/telo/DataBase/libGFRS/GFRSiOS.h:10:10: note: in file included from /Users/Multimodal/Desktop/telo/DataBase/libGFRS/GFRSiOS.h:10:
#include <opencv2/opencv.hpp>
         ^
./opencv2.framework/Headers/opencv.hpp:52:10: note: in file included from ./opencv2.framework/Headers/opencv.hpp:52:
#include "opencv2/video/video.hpp"
         ^
./opencv2.framework/Headers/video/video.hpp:47:10: note: in file included from ./opencv2.framework/Headers/video/video.hpp:47:
#include "opencv2/video/background_segm.hpp"
         ^
./opencv2.framework/Headers/video/background_segm.hpp:47:10: error: 'list' file not found
#include <list>
         ^
<unknown>:0: error: failed to import bridging header '/Users/Multimodal/Desktop/telo/DataBase/DataBase-Bridging-Header.h'

